added new plugin (event.js)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@ So here is a modelbox plugin packed with only most used features and is a very l
 </div>
         </div>
 
+        <div class="projectWrap">
+            <div class="projectHeading"><a href="eventPause.html">eventPause.js (A easy way to control events)</a></div>
+            <div class="projectImg"><img src="images/jqueryEvent.png"></div>
+            <div class="projectDesc">eventPause is a simple and light weight plugin, providing a lot of methods to control events. You don’t need to worry about the event handlers assigned for a particular event ,you just can pause and active it whenever you want.<br>
+<a href="eventPause.html">Read more</a>
+</div>
+        </div>
 
 	</section>
     </div>
