--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ So here is a modelbox plugin packed with only most used features and is a very l
 
         <div class="projectWrap">
             <div class="projectHeading"><a href="contextMenu.html">contextMenu.js </a></div>
-            <div class="projectImg"><img src="images/jqueryEvent.png"></div>
+            <div class="projectImg"></div>
             <div class="projectDesc">contextMenu.js is a   plugin to create windows like context menu with keyboard ineteraction, different  type of inputs ,trigger events and much more.<br>
 <a href="contextMenu.html">Read more</a>
 </div>
