--- a/contextMenu.html
+++ b/contextMenu.html
@@ -73,7 +73,7 @@
         <p>contextMenu.js is a   plugin to create windows like context menu with keyboard ineteraction, different  type of inputs ,trigger events and much more.<br />
           Why contextMenu.js ?:</p>
         <ul>
-          <li>Use as simple popup or as a context menu. With some twick can be used for multi purpose</li>
+          <li>Use as simple popup or as a context menu. With some twick can be used for multi purpose.</li>
           <li>Adjust position and size to fit in viewport.</li>
           <li>Keyboard interaction.</li>
           <li>Support different type of inputs (json, UL list)  .</li>
@@ -467,7 +467,7 @@ $('#pageNav').find('li').each(function (index, element) {
             triggerOn: 'hover',
             displayAround: 'trigger',
             position: 'right',
-            top: '20px'
+            verAdjust: -40
         })
     }
 });
