--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+
+
         <div class="projectWrap">
-            <div class="projectHeading"><a href="modalBox.html">modalBox.js (A light weight modal window plugin)</a></div>
-            <div class="projectImg"><img src="images/modelWindow.png"></div>
-            <div class="projectDesc">Modal window has become a very popular way of showing information in detail, and getting needed input while blocking the main application flow. There are large numbers of attractive plugin available over the internet with lot of options. But the question is do we need that all?<br>
-So here is a modelbox plugin packed with only most used features and is a very light weight plugin.<br>
-<a href="modalBox.html">Read more</a>
+            <div class="projectHeading"><a href="contextMenu.html">contextMenu.js (Easy and powerful context menu) </a></div>
+            <div class="projectImg"><img src="images/contextMenu.png"></div>
+            <div class="projectDesc">contextMenu.js is a   plugin to create windows like context menu with keyboard ineteraction, different  type of inputs ,trigger events and much more.It is small , easy, customizable and with some configuration it can be used in different ways.<br>
+<a href="contextMenu.html">Read more</a>
 </div>
         </div>
-
         <div class="projectWrap">
             <div class="projectHeading"><a href="eventPause.html">eventPause.js (A easy way to control events)</a></div>
             <div class="projectImg"><img src="images/jqueryEvent.png"></div>
@@ -44,12 +44,13 @@ So here is a modelbox plugin packed with only most used features and is a very l
 <a href="eventPause.html">Read more</a>
 </div>
         </div>
-
         <div class="projectWrap">
-            <div class="projectHeading"><a href="contextMenu.html">contextMenu.js </a></div>
-            <div class="projectImg"></div>
-            <div class="projectDesc">contextMenu.js is a   plugin to create windows like context menu with keyboard ineteraction, different  type of inputs ,trigger events and much more.<br>
-<a href="contextMenu.html">Read more</a>
+    <div class="projectHeading"><a href="modalBox.html">modalBox.js (A light weight modal window plugin)</a></div>
+            <div class="projectImg"><img src="images/modelWindow.png"></div>
+            <div class="projectDesc">Modal window has become a very popular way of showing information in detail, and getting needed input while blocking the main application flow. There are large numbers of attractive plugin available over the internet with lot of options. But the question is do we need that all?<br>
+So here is a modelbox plugin packed with only most used features and is a very light weight plugin.<br>
+<a href="modalBox.html">Read more</a>
+
 </div>
         </div>
 
