updated demo pages

--- a/eventPause.html
+++ b/eventPause.html
@@ -18,7 +18,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sudhanshu-yadav">View on GitHub</a>
+         <a id="forkme_banner" href="https://github.com/s-yadav">Fork me on GitHub</a>
 
           <h1 id="project_title"><a href="index.html">Utility plugins</a></h1>
           <h2 id="project_tagline"></h2>
@@ -40,9 +40,7 @@
       <div id="content">
       <div id="intro">
         <h3>eventPause.js</h3>
-        <p>jQuery gave us much clean and faster way to bind events with  cross browser support, deprecating obtrusive inline event  handler , addEventlistener() and attach event (as they are browser depended).<br>
-It also provided us method to unbind events either by event name or event name  and handler reference.<br>
-<br>
+        <p>jQuery gave us much clean and faster way to bind events with  cross browser support, deprecating obtrusive inline event  handler , addEventlistener() and attach event (as they are browser depended). You don&rsquo;t need to worry about the event handlers assigned for a    particular event , you just can pause and active it whenever you want. <br>
 But there some situation comes where we just want to pause event (or say unbind  it temporally). For that we unbind events and bind it again when we need. <br>
 But this become painful on binding event again when there is no reference of  event handler or you don&rsquo;t have its scope, or you just don&rsquo;t know what event  handlers are assigned to a particular event.</p>
 <p>So  why not have a plugin which can pause any events or group of events  temporarily. <br>
