--- a/contextMenu.html
+++ b/contextMenu.html
@@ -18,7 +18,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sudhanshu-yadav">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/s-yadav">Fork me on GitHub</a>
 
           <h1 id="project_title"><a href="index.html">Utility plugins</a></h1>
           <h2 id="project_tagline"></h2>
