--- a/contextMenu.html
+++ b/contextMenu.html
@@ -985,8 +985,8 @@ Following classes are associated with context menu.
   <div id="tipContainer"></div>
   
 </html>
-<script type="text/javascript" src="javascripts/jquery.min.js"></script>
-<script type="text/javascript" src="javascripts/jquery-ui.min.js"></script>
-<script type="text/javascript" src="javascripts/contextMenu.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+<script type="text/javascript" src="//raw.github.com/s-yadav/contextMenu.js/master/contextMenu.js"></script>
 <script type="text/javascript" src="javascripts/javascript.js"></script>
 <script type="text/javascript" src="javascripts/contextMenuDemo.js"></script>
