jsonQ documentation and changed link of jquery to cdn link in modalBox.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
+        <div class="projectWrap">
+            <div class="projectHeading"><a href="jsonQ.html">jsonQ.js (A json manipulation js library) </a></div>
+            <div class="projectImg"><img src="images/JSONQuery_logo.jpg"></div>
+            <div class="projectDesc">jsonQ is a light weight and feature-rich javascript library to make your world around json fast and easy. For a json, it makes traversing (you don’t need to make loop inside loop), extracting data, manipulating it very simple. <br>
+<a href="jsonQ.html">Read more</a>
+</div>
+        </div>
 
         <div class="projectWrap">
             <div class="projectHeading"><a href="contextMenu.html">contextMenu.js (Easy and powerful context menu) </a></div>
