--- a/modalBox.html
+++ b/modalBox.html
@@ -1213,6 +1213,6 @@ Using our plugin is quite simple. Lets see some example.<br>
   
 </html>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script type="text/javascript" src="//raw.github.com/s-yadav/modalBox.js/master/modalBox.js"></script>
+<script type="text/javascript" src="javascripts/modalBox.js"></script>
 <script type="text/javascript" src="javascripts/javascript.js"></script>
 <script type="text/javascript" src="javascripts/modalBoxDemo.js"></script>
