Updated jsonQ demo file

--- a/jsonQ.html
+++ b/jsonQ.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/jsonQpage.css">
     
     <title>
-      jsonQ.js
+      jsonQ 
     </title>
   </head>
   
@@ -62,7 +62,7 @@
         <div id="content">
           <div id="intro">
             <h2 style="margin:0px;">
-              jsonQ.js
+              jsonQ
             </h2>
             <p>
               jsonQ  is a light weight and feature-rich javascript library to make your world around  json fast and easy. For a json, it makes traversing (you don’t need to make  loop inside loop), extracting data, manipulating it very simple. &nbsp;It also provide some utilty methods , we need while working with json which directly works with a json object.
