--- a/jsonQ.html
+++ b/jsonQ.html
@@ -1834,7 +1834,7 @@ jsonQ.each(testJson, function (key, value) {
               <div class="method-syntax">
                 <span class="syntax">Syntax</span>:  jsonQ.objType(data)
                 <br>
-				<span class="return">Return</span>:  string indicating object type (json,array,string,number,boolean).
+				<span class="return">Return</span>:  string indicating object type (object,array,string,number,boolean).
               </div>
               <div class="param-desc"><div class="params-label">Parameters</div>
               	<span class="param-name">
