--- a/contextMenu.html
+++ b/contextMenu.html
@@ -645,6 +645,12 @@ menuTrgr.contextMenu('menu','#demoMenu',{
     <td>If true close the context menu on window scroll and resize event.</td>
   </tr>
   <tr>
+    <td>closeOther</td>
+    <td>true</td>
+    <td>true,false</td>
+    <td>If true close already opened contextMenu (Maintaining one instance a time).</td>
+  </tr>
+  <tr>
     <td>sizeStyle</td>
     <td>auto</td>
     <td>auto, content</td>
@@ -983,6 +989,9 @@ Following classes are associated with context menu.
   </body>
   
   <div id="tipContainer"></div>
+    <script>
+    	window.scrollTo(0,0);
+    </script>
   
 </html>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
@@ -990,3 +999,4 @@ Following classes are associated with context menu.
 <script type="text/javascript" src="javascripts/contextMenu.js"></script>
 <script type="text/javascript" src="javascripts/javascript.js"></script>
 <script type="text/javascript" src="javascripts/contextMenuDemo.js"></script>
+
