context menu js change

--- a/modalBox.html
+++ b/modalBox.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/modalBoxDemo.css">
-	
+	<style>
+    	*{
+			box-sizing:border-box;
+			-moz-box-sizing:border-box;
+			}
+    </style>
     <title>modalBox.js</title>
   </head>
 
@@ -1212,7 +1217,7 @@ Using our plugin is quite simple. Lets see some example.<br>
   </body>
   
 </html>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript" src="javascripts/modalBox.js"></script>
 <script type="text/javascript" src="javascripts/javascript.js"></script>
 <script type="text/javascript" src="javascripts/modalBoxDemo.js"></script>
