Update documentation of build tool

--- a/nodebuildscript/index.html
+++ b/nodebuildscript/index.html
@@ -59,9 +59,12 @@ You may like to see about node.js, less, handlebars, as we are using them on our
 </p>
 
 <p>
-To start using this boilerplate copy whole folder and start changing each files as your need. You can seperate you working and build directory outside. <br/> <br/>
-
-We will see how we can use this boilerplate to create our build script.</p>
+To start using this boilerplate copy whole folder and start changing each files as your need. You can seperate you working and build directory outside. </p>
+<p>After you can go to node project folder through command line and start build process with </p>
+<pre><code>node build</code></pre> 
+  <br/>
+  
+  We will see how we can use this boilerplate to create our build script.</p>
 
 <h3>Files</h3>
 <div id="buildjsLink" class="file-desc-block">
