--- a/contextMenu.html
+++ b/contextMenu.html
@@ -716,6 +716,11 @@ Inside callback this refers to trigger element.
     <td>destroy</td>
     <td>Remove context menu instance for that trigger completely.</td>
   </tr>
+  <tr>
+    <td>close</td>
+    <td>To manually close context menu.</td>
+  </tr>
+
 </table>
 Popup method is default when selector type is selector string , jquery object, DOM object. Menu method is default when selector type is JSON object.
 <h3 id="menuParameterDoc">Context menu parameters</h3>
@@ -994,8 +999,8 @@ Following classes are associated with context menu.
     </script>
   
 </html>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 <script type="text/javascript" src="javascripts/contextMenu.js"></script>
 <script type="text/javascript" src="javascripts/javascript.js"></script>
 <script type="text/javascript" src="javascripts/contextMenuDemo.js"></script>
