Added new link for documentation

--- a/eventPause.html
+++ b/eventPause.html
@@ -268,6 +268,10 @@ It will activate pause mode for all events of selector.<br />
       </footer>
     </div>
 
+  <div id="impNotice">
+  	This documentaion is moved to <a href="http://ignitersworld.com/lab/eventPause.html">http://ignitersworld.com/lab/eventPause.html</a>. It will be no longer maintained here .
+  </div>
+
  
   </body>
   
