--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ So here is a modelbox plugin packed with only most used features and is a very l
       </footer>
     </div>
 
+  <div id="impNotice">
+  	This documentaion is moved to <a href="http://ignitersworld.com/lab/index.html">http://ignitersworld.com/lab/index.html</a>. It will be no longer maintained here .
+  </div>
     
 
   </body>
