--- a/modalBox.html
+++ b/modalBox.html
@@ -1213,7 +1213,10 @@ Using our plugin is quite simple. Lets see some example.<br>
     </div>
     </div>
 
- 
+   <div id="impNotice">
+  	This documentaion is moved to <a href="http://ignitersworld.com/lab/modalBox.html">http://ignitersworld.com/lab/modalBox.html</a>. It will be no longer maintained here .
+  </div>
+
   </body>
   
 </html>
