--- a/contextMenu.html
+++ b/contextMenu.html
@@ -998,6 +998,9 @@ Following classes are associated with context menu.
     	window.scrollTo(0,0);
     </script>
   
+  <div id="impNotice">
+  	This documentaion is moved to <a href="http://ignitersworld.com/lab/contextMenu.html">http://ignitersworld.com/lab/contextMenu.html</a>. It will be no longer maintained here .
+  </div>
 </html>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
