Redirect landing page to rnf

--- a/index.html
+++ b/index.html
@@ -3,78 +3,12 @@
 
   <head>
     <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="sudhanshu-yadav.github.com : " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/style.css">
-
-    <title>Utility plugins</title>
+    <title>Documentation</title>
+    <script>
+      document.location.replace('https://s-yadav.github.io/react-number-format')
+    </script>
   </head>
 
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/s-yadav">Fork me on GitHub</a>
-
-          <h1 id="project_title"><a href="index.html">Utility plugins</a></h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-
-        <div class="projectWrap">
-            <div class="projectHeading"><a href="jsonQ.html">jsonQ.js (A json manipulation js library) </a></div>
-            <div class="projectImg"><img src="images/JSONQuery_logo.jpg"></div>
-            <div class="projectDesc">jsonQ is a light weight and feature-rich javascript library to make your world around json fast and easy. For a json, it makes traversing (you don’t need to make loop inside loop), extracting data, manipulating it very simple. <br>
-<a href="jsonQ.html">Read more</a>
-</div>
-        </div>
-
-        <div class="projectWrap">
-            <div class="projectHeading"><a href="contextMenu.html">contextMenu.js (Easy and powerful context menu) </a></div>
-            <div class="projectImg"><img src="images/contextMenu.png"></div>
-            <div class="projectDesc">contextMenu.js is a   plugin to create windows like context menu with keyboard ineteraction, different  type of inputs ,trigger events and much more.It is small , easy, customizable and with some configuration it can be used in different ways.<br>
-<a href="contextMenu.html">Read more</a>
-</div>
-        </div>
-        <div class="projectWrap">
-            <div class="projectHeading"><a href="eventPause.html">eventPause.js (A easy way to control events)</a></div>
-            <div class="projectImg"><img src="images/jqueryEvent.png"></div>
-            <div class="projectDesc">eventPause is a simple and light weight plugin, providing a lot of methods to control events. You don’t need to worry about the event handlers assigned for a particular event ,you just can pause and active it whenever you want.<br>
-<a href="eventPause.html">Read more</a>
-</div>
-        </div>
-        <div class="projectWrap">
-    <div class="projectHeading"><a href="modalBox.html">modalBox.js (A light weight modal window plugin)</a></div>
-            <div class="projectImg"><img src="images/modelWindow.png"></div>
-            <div class="projectDesc">Modal window has become a very popular way of showing information in detail, and getting needed input while blocking the main application flow. There are large numbers of attractive plugin available over the internet with lot of options. But the question is do we need that all?<br>
-So here is a modelbox plugin packed with only most used features and is a very light weight plugin.<br>
-<a href="modalBox.html">Read more</a>
-
-</div>
-        </div>
-
-	</section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-  <div id="impNotice">
-  	This documentaion is moved to <a href="http://ignitersworld.com/lab/index.html">http://ignitersworld.com/lab/index.html</a>. It will be no longer maintained here .
-  </div>
-    
-
   </body>
 </html>
